# customic

./: .gitignore  Dockerfile  README.md  api.http  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
customic/: manage.py  schema.yml
customic/api/: models.py  paginations.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
customic/api/management/commands/: create_user.py
customic/api/migrations/: 0001_initial.py  0002_alter_mockup_shirt_color_delete_shirt.py  0003_alter_mockup_font_alter_mockup_shirt_color_and_more.py  0004_mockup_owner_task_owner.py  0005_remove_mockup_owner_remove_task_owner.py  0006_alter_mockup_image.py
customic/customic/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
